--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#resume">Resume</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </div>
+   <div class="nav">
+       <img class="logo" src="img/Newlogo-01.png">
+       <div class="right">
+           <a href="#">Home</a>
+           <a href="#">Portfolio</a>
+           <a href="#">Resume</a>
+           <a href="#">Contact</a>
+       </div>
+   </div>
+       
+        <div class="welcome">
+            <h1>Welcome!</h1>
+        </div>
+    <div class="background">
+        <div class="column">
+            <img src="img/IMG_1229.jpg" width="1000px" height="638px" class="profilepic">
+            <div class="profileimg"></div>
+            <h2>Who Am I?</h2>
+            <p>I am a graphic designer and UX/UI designer who is proficient in Adobe Illustrator.</p>
+
+        </div>
+    </div>    
 </body>
 
 </html>
