--- a/index.html
+++ b/index.html
@@ -9,25 +9,43 @@
 
 <body>
    <div class="nav">
-       <img class="logo" src="img/Newlogo-01.png">
+       <img class="logo" src="img/Newlogo-12.png">
        <div class="right">
            <a href="#">Home</a>
-           <a href="#">Portfolio</a>
+           <a href="#">Profile</a>
            <a href="#">Resume</a>
            <a href="#">Contact</a>
        </div>
    </div>
-       
+    
+   <div class="background">
         <div class="welcome">
-            <h1>Welcome!</h1>
+            <h2>Welcome!</h2>
         </div>
-    <div class="background">
-        <div class="column">
-            <img src="img/IMG_1229.jpg" width="1000px" height="638px" class="profilepic">
-            <div class="profileimg"></div>
-            <h2>Who Am I?</h2>
-            <p>I am a graphic designer and UX/UI designer who is proficient in Adobe Illustrator.</p>
 
+        <div class="buttons">
+            <button class="button graphicdesign">Graphic Design</button>
+            <button class="button uxui">UX/UI Design</button>
+        </div>
+        <div class="gallery">
+            <div class="row1">
+                <img src="Graphic Design/IMG_0782-01.jpg">
+                <img src="Graphic Design/IMG_0784-01.jpg">
+                <img src="Graphic Design/IMG_0785-01.jpg">
+                <img src="Graphic Design/IMG_0786-01.jpg">
+                <img src="Graphic Design/IMG_0787-01.jpg">
+            </div>
+            <div class="row2">
+                <img src="Graphic Design/HPSquare2.pdf">
+                <img src="Graphic Design/HpSquare3.pdf">
+                <img src="Graphic Design/HPDigitalSign.pdf" class="sign">
+                <img src="Graphic Design/HPOsquare.pdf">
+            </div>
+            <div class="row3">
+                <img src="Graphic Design/IMG_0766.JPG">
+                <img src="Graphic Design/IMG_0767.JPG">
+                <img src="Graphic Design/IMG_0769.jpg">
+            </div>
         </div>
     </div>    
 </body>
