--- a/index.html
+++ b/index.html
@@ -19,37 +19,65 @@
    </div>
     
    <div class="background">
-        <div class="welcome">
-            <h2>Welcome!</h2>
+        <div class="banner">
+            <h2 class="welcome">Welcome!</h2>
         </div>
 
         <div class="buttons">
             <button class="button graphicdesign">Graphic Design</button>
             <button class="button uxui">UX/UI Design</button>
         </div>
+
         <div class="gallery">
             <div class="row1">
-                <img src="Graphic Design/IMG_0782-01.jpg">
-                <img src="Graphic Design/IMG_0784-01.jpg">
-                <img src="Graphic Design/IMG_0785-01.jpg">
-                <img src="Graphic Design/IMG_0786-01.jpg">
-                <img src="Graphic Design/IMG_0787-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/thesis1-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/thesis2-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/thesis3-01.jpg">
             </div>
             <div class="row2">
-                <img src="Graphic Design/HPSquare2.pdf">
-                <img src="Graphic Design/HpSquare3.pdf">
-                <img src="Graphic Design/HPDigitalSign.pdf" class="sign">
-                <img src="Graphic Design/HPOsquare.pdf">
+                <img class="imgthumbnail" src="Graphic Design/IMG_0782-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/IMG_0784-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/IMG_0785-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/IMG_0786-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/IMG_0787-01.jpg">
             </div>
             <div class="row3">
-                <img src="Graphic Design/IMG_0766.JPG">
-                <img src="Graphic Design/IMG_0767.JPG">
-                <img src="Graphic Design/IMG_0769.jpg">
+                <img class="imgthumbnail" src="Graphic Design/HPSquare2-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/HpSquare3.jpg">
+                <img class="imgthumbnail" src="Graphic Design/HPDigitalSignSqaure-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/HPOsquare.jpg">
+            </div>
+            <div class="row4">
+                <img class="imgthumbnail" src="Graphic Design/BooBashSqaure-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Environment poster sqaure 2-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Environment Poster Square 2-01-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/SGADebate&VoteSquare-01.jpg">
+            </div>
+            <div class="row5">
+                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 1.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 2-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 8-01.jpg">
+            </div>
+            <div class="row6">
+                <img class="imgthumbnail" src="Graphic Design/Logodesignday9-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/ZeldaGuide.jpg">
+                <img class="imgthumbnail" src="Graphic Design/VortexAnalytics.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-07.jpg">
+            </div>
+            <div class="row7">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-01.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-02.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-03.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-05.jpg">
+                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-06.jpg">
             </div>
         </div>
     </div>    
 </body>
-
 <footer></footer>
-
+<div class="preloader">
+    <img src="Graphic Design/Newlogo-13.png" class="loading">
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </html>
