--- a/uxui.html
+++ b/uxui.html
@@ -13,18 +13,8 @@
 </head>
 
 <body>
-   <!--<div class="nav">
-       <img class="logo" src="img/Newlogo-12.png">
-       <div class="right">
-           <a href="#">Home</a>
-           <a href="#">Profile</a>
-           <a href="#">Resume</a>
-           <a href="#">Contact</a>
-       </div>
-   </div>-->
-
    <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo-13.png" class="logo"></a>
+    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -57,10 +47,11 @@
             <a href="uxui.html"><button class="button uxui2" type="button">UX/UI Design</button></a>
         </div>
 
-        <div id="carouselExampleControls" class="carousel slide caro" data-ride="carousel">
+        <!--<div id="carouselExampleControls" class="carousel slide caro" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="Graphic Design/Workers Defense Project Website Redesign.jpg" class="d-block w-100" alt="...">
+                <button class="cs1" type="button" href="case1.html">View More</button> 
               </div>
               <div class="carousel-item">
                 <img src="Graphic Design/Recipe Roulette Presentation.jpg" class="d-block w-100" alt="...">
@@ -77,7 +68,21 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+        </div>-->
+
+        <!--<div class="casestudy">
+            <div>
+                <img src="Graphic Design/Workers Defense Project Website Redesign.jpg" class="wdp">
+                <a href="case1.html"><button class="cs1" type="button">View More</button></a> 
+            </div>
+        </div>-->
+
+        <div class="jumbotron wdp"></div>
+
+        <div class="buttons">
+            <a href="case1.html"><button class="button cs1" type="button">View More</button></a>
+        </div>
+
     </div>    
 </body>
 <footer></footer>
